tests/snapshot/snapshots/snapshot__error_simple_contract_fail.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: contract broken by a value
  ┌─ [INPUTS_PATH]/errors/simple_contract_fail.ncl:1:1
  │
1 │ 1 | String
  │ ^   ^^^^^^ expected type
  │ │    
  │ applied to this expression


